--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -3,6 +3,7 @@ $color-text-link-hover: #A74300;
 $color-text-primary: #333333;
 $color-text-secondary: #5D5D5D;
 $color-background: #eeeeee;
+$color-post-background: #dddddd;
 $color-icon: #ececec;
 $color-icon-background: #9e9e9e;
 $color-icon-background-hover: #7E7E7E;
