Какая-то работа, уже забыл какая. Извините, впредь я точно буду нормально коммитить и работать по gitflow.....

--- a/src/components/BoardHeader/BoardHeader.module.scss
+++ b/src/components/BoardHeader/BoardHeader.module.scss
@@ -11,6 +11,7 @@
     .boardLink {
         font-size: $typography-header-xs-font-size;
         font-weight: 700;
+        color: $color-board-name;
     }
 
     .createLink {
