--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,12 +1,28 @@
-$color-text-link: #ff6709;
-$color-text-link-hover: #A74300;
-$color-text-primary: #333333;
+// $color-text-link: #ff6709;
+// $color-text-link-hover: #A74300;
+// $color-board-name: #ff6709;
+// $color-text-primary: #333333;
+// $color-text-secondary: #5D5D5D;
+// $color-background: #eeeeee;
+// $color-post-background: #dddddd;
+// $color-post-selected-background: #eedacb;
+// $color-icon: #ececec;
+// $color-icon-background: #9e9e9e;
+// $color-icon-background-hover: #7E7E7E;
+
+
+$color-text-link: #34345c;
+$color-board-name: #af0a0f;
+$color-text-link-hover: #DD0000;
+$color-text-primary: black;
 $color-text-secondary: #5D5D5D;
-$color-background: #eeeeee;
-$color-post-background: #dddddd;
+$color-background: #eef2ff;
+$color-post-background: #d6daf0;
+$color-post-selected-background: #D6BAD0;
 $color-icon: #ececec;
 $color-icon-background: #9e9e9e;
 $color-icon-background-hover: #7E7E7E;
+
 
 $font-main: 'Trebuchet MS';
 
