--- a/src/components/ThreadPageHeader/ThreadPageHeader.module.scss
+++ b/src/components/ThreadPageHeader/ThreadPageHeader.module.scss
@@ -11,6 +11,7 @@
     .boardLink {
         font-size: $typography-header-xs-font-size;
         font-weight: 700;
+        color: $color-board-name;
     }
 
     .createLink {
